--- a/DESeq_qa-suz12_Paper.Rmd
+++ b/DESeq_qa-suz12_Paper.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "DESeq2_qa-suz12"
 author: "Eddie Torres"
-date: "2025-04-18"
+date: "2025-05-24"
 output: html_document
 ---
 
@@ -34,23 +34,22 @@ library(dplyr)
 Read in the featurecounts output, convert to a matrix, and remove unneccesary columns to include ONLY the count numbers, then convert columns to numeric.
 ```{r cts}
 setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub")
-cts2 <- as.matrix(read.table("./text_files/readcounts_FINAL.txt", sep="\t", row.names =1, header = TRUE))
-ctstest <- as.matrix(read.table("./text_files/readcounts_newseq.txt", sep="\t", row.names =1, header = TRUE))
-ctstest <- as.matrix(ctstest[,-c(1:5)])
+cts <- as.matrix(read.table("./text_files/readcounts_qa.txt", sep="\t", row.names =1, header = TRUE))
+cts <- as.matrix(cts[,-c(1:5)])
 ## change ncol to match number of columns
-cts_numeric <- matrix(as.numeric(ctstest), ncol = 37)
-dimnames(cts_numeric) <- list(rownames(ctstest), colnames(ctstest))
+cts_numeric <- matrix(as.numeric(cts), ncol = 19)
+dimnames(cts_numeric) <- list(rownames(cts), colnames(cts))
 ```
 
 
 Export column names to a text file, open in a text editor and replace SRRs with short/identifiable names, save, and read in the file again to replace column titles with human readable names.
 
 ```{r titles}
-samplesname <- colnames(ctstest)
+samplesname <- colnames(cts)
 write.table(samplesname, file="samplenames.txt", sep="\t")
 
 #after editing sample names in excel or text editor (new names are in column 3), read in the spreadsheet with hand annotated sample names that are short 
-rename <- read.table("./samplenames2.txt", header=FALSE, skip=1, sep = "\t")
+rename <- read.table("./samplenames3.txt", header=FALSE, skip=1, sep = "\t")
 #assign short sample names to variable
 cnames <- rename$V2
 #replace column names
@@ -60,18 +59,12 @@ colnames(cts_numeric) <- cnames
 All samples must have the same number of replicates. I'm averaging across samples that have multiple technical replicates, then reducing the number of replicates to 2 for each condition.
 
 ```{r titles}
-cac1 <- rowMeans(cts_numeric[, 1:3], na.rm = TRUE)
-cac2 <- rowMeans(cts_numeric[, 4:6], na.rm = TRUE)
-cac3 <- rowMeans(cts_numeric[, 7:9], na.rm = TRUE)
-naf1 <- rowMeans(cts_numeric[, 10:12], na.rm = TRUE)
-asf1 <- rowMeans(cts_numeric[, 13:15], na.rm = TRUE)
-naf2 <- rowMeans(cts_numeric[, 16:18], na.rm = TRUE)
-ATRX <- rowMeans(cts_numeric[, 19:21], na.rm = TRUE)
-WT <- rowMeans(cts_numeric[, 22:25], na.rm = TRUE)
-set7 <- rowMeans(cts_numeric[, 26:28], na.rm = TRUE)
-cac1_new <- rowMeans(cts_numeric[, 29:31], na.rm = TRUE)
-cac1_cac2 <- rowMeans(cts_numeric[, 32:34], na.rm = TRUE)
-cac1_suz12 <- rowMeans(cts_numeric[, 35:37], na.rm = TRUE)
+suz12 <- rowMeans(cts_numeric[, 1:3], na.rm = TRUE)
+WT <- rowMeans(cts_numeric[, 4:7], na.rm = TRUE)
+WT_0hr <- rowMeans(cts_numeric[, 11:13], na.rm = TRUE)
+WT_24hr <- rowMeans(cts_numeric[, 8:10], na.rm = TRUE)
+qa_0hr <- rowMeans(cts_numeric[, 14:15], na.rm = TRUE)
+qa_24hr <- cts_numeric[, 19]
 #set3 <- rowMeans(cts_numeric[, 29:30], na.rm = TRUE)
 ```
 
@@ -91,7 +84,7 @@ After that, convert each column to a factor.
 
 ```{r coldata}
 #Check Directory (./ vs ../)
-coldata <- read.csv("../coldata.csv", header= TRUE, row.names = 1)
+coldata <- read.csv("../coldata_qa.csv", header= TRUE, row.names = 1)
 coldata$condition <- factor(coldata$condition)
 coldata$type <- factor(coldata$type)
 ```
@@ -116,7 +109,7 @@ dds<- DESeqDataSetFromMatrix(countData = round(cts_numeric_3),
 dds
 
 ##pre-filteringreads <2
-keep <- rowSums(counts(dds)) >= 38
+keep <- rowSums(counts(dds)) >= 20
 dds<- dds[keep,]
 
 #specify level of comparison
@@ -134,49 +127,29 @@ Export genes with statistically significant differential expression when compare
 ```{r coldata}
 alpha = 0.05
 
-cac1 <- results(dds2, alpha=alpha, contrast=c("condition", "cac1", "WT"))
-cac2 <- results(dds2, alpha=alpha, contrast=c("condition", "cac2", "WT"))
-cac3<- results(dds2, alpha=alpha, contrast=c("condition", "cac3", "WT"))
-naf1 <- results(dds2, alpha=alpha, contrast=c("condition", "naf1", "WT"))
-naf2 <- results(dds2, alpha=alpha, contrast=c("condition", "naf2", "WT"))
-asf1 <- results(dds2, alpha=alpha, contrast=c("condition", "asf1", "WT"))
-ATRX <- results(dds2, alpha=alpha, contrast=c("condition", "ATRX", "WT"))
-set7 <- results(dds2, alpha=alpha, contrast=c("condition", "set7", "WT"))
-cac1_new <- results(dds2, alpha=alpha, contrast=c("condition", "cac1_new", "WT"))
-cac1_cac2 <- results(dds2, alpha=alpha, contrast=c("condition", "cac1_cac2", "WT"))
-cac1_suz12 <- results(dds2, alpha=alpha, contrast=c("condition", "cac1_suz12", "WT"))
-#set3 <- results(dds2, alpha=alpha, contrast=c("condition", "set3", "WT"))
+suz12 <- results(dds2, alpha=alpha, contrast=c("condition", "suz12", "WT"))
+WT_0hr <- results(dds2, alpha=alpha, contrast=c("condition", "WT_0hr", "WT"))
+WT_24hr <- results(dds2, alpha=alpha, contrast=c("condition", "WT_24hr", "WT"))
+qa_0hr <- results(dds2, alpha=alpha, contrast=c("condition", "qa_0hr", "WT"))
+qa_24hr <- results(dds2, alpha=alpha, contrast=c("condition", "qa_24hr", "WT"))
 
 ```
 
 Subset to only export significant differentially expressed genes
 
 ```{r}
-cac1_sig <- subset(cac1, padj < 0.05)
-cac2_sig <- subset(cac2, padj < 0.05)
-cac3_sig <- subset(cac3, padj < 0.05)
-naf1_sig <- subset(naf1, padj < 0.05)
-naf2_sig <- subset(naf2, padj < 0.05)
-asf1_sig <- subset(asf1, padj < 0.05)
-ATRX_sig <- subset(ATRX, padj < 0.05)
-set7_sig <- subset(set7, padj < 0.05)
-cac1_new_sig <- subset(cac1_new, padj < 0.05)
-cac1_cac2_sig <- subset(cac1_cac2, padj < 0.05)
-cac1_suz12_sig <- subset(cac1_suz12, padj < 0.05)
-#set3 <- subset(set3, padj < 0.05)
+suz12_sig <- subset(suz12, padj < 0.05)
+WT_0hr_sig <- subset(WT_0hr, padj < 0.05)
+WT_24hr_sig <- subset(WT_24hr, padj < 0.05)
+qa_0hr_sig <- subset(qa_0hr, padj < 0.05)
+qa_24hr_sig <- subset(qa_24hr, padj < 0.05)
 
-write.csv(as.data.frame(cac1_sig), file = "cac1.csv")
-write.csv(as.data.frame(cac2_sig), file = "cac2.csv")
-write.csv(as.data.frame(cac3_sig), file = "cac3.csv")
-write.csv(as.data.frame(naf1_sig), file = "naf1.csv")
-write.csv(as.data.frame(naf2_sig), file = "naf2.csv")
-write.csv(as.data.frame(asf1_sig), file = "asf1.csv")
-write.csv(as.data.frame(ATRX_sig), file = "ATRX.csv")
-write.csv(as.data.frame(set7_sig), file = "set7.csv")
-write.csv(as.data.frame(cac1_new_sig), file = "cac1_new.csv")
-write.csv(as.data.frame(cac1_cac2_sig), file = "cac1_cac2.csv")
-write.csv(as.data.frame(cac1_suz12_sig), file = "cac1_suz12.csv")
-#write.csv(as.data.frame(set3), file = "set3.csv")
+write.csv(as.data.frame(suz12_sig), file = "suz12.csv")
+write.csv(as.data.frame(WT_0hr_sig), file = "WT_0hr.csv")
+write.csv(as.data.frame(WT_24hr_sig), file = "WT_24hr.csv")
+write.csv(as.data.frame(qa_0hr_sig), file = "qa_0hr.csv")
+write.csv(as.data.frame(qa_24hr_sig), file = "qa_24hr.csv")
+
 ```
 
 ### Analyzing DE Genes
@@ -274,9 +247,9 @@ input <- c(
 ngenes = read.csv("../csv_files/neurospora_genes.csv")
 
 combine <- transform(merge(ngenes, l2fc, by = "VALUE"))
-track = combine %>% select("SequenceID", "FeatureStart", "FeatureEnd", "VALUE", "asf1.csv", "ATRX.csv", "cac1.csv", "cac2.csv", "cac3.csv", "naf1.csv", "naf2.csv", "set7.csv", "cac1_new.csv", "cac1_cac2.csv", "cac1_suz12.csv")
+track = combine %>% select("SequenceID", "FeatureStart", "FeatureEnd", "VALUE", "suz12_sig.csv", "WT_0hr_sig.csv", "WT_24hr_sig.csv", "qa_0hr_sig.csv", "qa_24hr_sig.csv")
 
-write.table(track, file="newseq.igv", sep="\t", row.names = FALSE, quote = FALSE)
+write.table(track, file="qa-suz12.igv", sep="\t", row.names = FALSE, quote = FALSE)
 ```
 
 #Subsetting DEG by which strain they are up- or downregulated in CAF-1 mutants. Also extracting a list of ALL DEG for GO Analysis
